Fix missing margin on h4

--- a/ghme.css
+++ b/ghme.css
@@ -58,6 +58,7 @@ article > h1,
 article > h2,
 article > h3,
 article > h5,
+article > h4,
 article > h6,
 article > blockquote,
 article > ul,
